# iris-mini

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml
src/iris_mini.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/iris_predict/: __main__.py  data.py  features.py  infer.py  model.py  train.py  utils.py
